--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   carousel_slider: ^5.1.1
+  share_plus: ^11.1.0
+  sqflite: ^2.4.2
+  path: ^1.9.1
+  get: ^4.7.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   get_cli: ^1.9.1
-  get: ^4.6.6
   http: ^1.4.0
   google_fonts: ^6.3.0
 
